fix spacing mobile podcast list

--- a/src/assets/sass/pages/_podcasts.sass
+++ b/src/assets/sass/pages/_podcasts.sass
@@ -7,6 +7,12 @@
   padding-top: 2.5rem
   border-top: 2px solid $color-grey-light-1
 
+  @include respond(tab-port)
+    width: 80%
+
+  @include respond(phone)
+    width: 90%
+
   &__heading
     font-size: 5rem
 
@@ -34,7 +40,6 @@
   &__info    
     padding: 2rem
     width: 30rem
-    // margin-left: 3rem
     margin: 7rem 0 0 3rem
     max-height: 50rem
     font-size: $default-font-size
